projects/vb6parse/snapshots/syntax/statements/filesystem/rmdir/rmdir_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/filesystem/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RmDirStatement
      children:
        - kind: RmDirKeyword
          text: RmDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
